--- a/global-styles.css
+++ b/global-styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f7f5f8;
+    font-family: 'Roboto', sans-serif;
+}
+
 ol, ul {
     list-style: none;
 }
@@ -24,6 +29,11 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
+}
+
+img {
+    width: 100%;
+    height: auto;
 }
 
 .visually-hidden {
