--- a/style.css
+++ b/style.css
@@ -83,12 +83,12 @@
 }
 
 .days-timer__picture-wrapper {
-    width: 25%;
+    width: 23px;
 }
 
 
 
-.main__menu {
+.menu {
     display: grid;
     justify-items: center;
     grid-template-columns: 1fr;
@@ -136,4 +136,71 @@
     position: relative;
     top: 8px;
     right: 2%;
+}
+
+
+@media (min-width: 360px) {
+    .days-timer__text {
+        font-size: 14px;
+    }
+
+    .days-timer__counter-text {
+        font-size: 18px;
+    }
+
+    .menu__section-title {
+        font-size: 108%;
+        max-width: 104px;
+    }
+
+    .days-timer__counter-wrapper {
+        width: 38%;
+        justify-content: flex-end;
+    }
+
+    .days-timer {
+        padding: 10px 15px;
+    }
+}
+
+@media (min-width: 420px) {
+    .wrapper {
+        max-width: 420px;
+        margin: 0 auto;
+    }
+}
+
+@media (min-width: 768px) {
+    .wrapper {
+        max-width: 600px;
+        margin: 0 auto;
+    }
+
+    .main__content {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 80px 1fr;
+        grid-row-gap: 30px;
+    }
+
+    .days-timer {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .menu {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 40px;
+        grid-row-gap: 30px;
+        grid-area: 1 / 1 / 2 / 2;
+        padding: 0;
+    }
+
+    .main__bulletin-board {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .menu__section {
+        width: 100%;
+    }
 }
