--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
     background-color: #242424;
     color: #ffffff;
     border-radius: 10px;
-    box-shadow: 0px 3px 6px #0000003c;
+    box-shadow: 0 3px 6px #0000003c;
 }
 
 .days-timer__text {
@@ -110,6 +110,7 @@
     text-align: left;
     font-size: 14px;
     max-width: 92px;
+    word-wrap: break-word;
 }
 
 .menu__section-image-projects-search {
@@ -137,6 +138,76 @@
     right: 2%;
 }
 
+.bulletin-board {
+    background-color: #ffffff;
+    color: #ffffff;
+    box-shadow: 0 3px 6px #0000003c;
+    border-radius: 10px;
+}
+
+.bulletin-board__title-wrapper {
+    background-color: #242424;
+    border-radius: 10px 10px 0 0;
+    padding: 10px 10px;
+}
+
+.bulletin-board__title {
+    font-size: 14px;
+}
+
+.bulletin-board__announcements-wrapper {
+    background-color: #ffffff;
+    border-radius: 0 0 10px 10px;
+}
+
+.bulletin-board__announcements {
+    padding: 25px 10px;
+    padding-bottom: 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.bulletin-board__announcement {
+    width: 100%;
+    background-color: #242424;
+    border-radius: 20px;
+    box-shadow: 0 3px 6px #00000029;
+    padding: 10px 15px;
+    margin-bottom: 20px;
+}
+
+.bulletin-board__announcement:last-of-type {
+    margin-bottom: 0;
+}
+
+.bulletin-board__text {
+    word-wrap: break-word;
+    font-size: 12px;
+}
+
+.bulletin-board__author {
+    word-wrap: break-word;
+    font-size: 10px;
+    text-decoration: underline;
+}
+
+.bulletin-board__button-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+.button {
+    background-color: #460EDE;
+    padding: 10px 30px;
+    border-radius: 10px;
+    box-shadow: 0 3px 6px #00000029;
+}
+
+.bulletin-board__button {
+    font-weight: 300;
+}
 
 @media (min-width: 360px) {
     .days-timer__text {
