added board adaptive, added fonts

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@
 .days-timer__counter-text {
     font-size: 16px;
     font-style: italic;
-    font-weight: bold;
+    font-weight: 900;
     margin-right: 10px;
 }
 
@@ -219,8 +219,8 @@
     }
 
     .menu__section-title {
-        font-size: 108%;
-        max-width: 114px;
+        font-size: 16px;
+        max-width: 108px;
     }
 
     .days-timer__counter-wrapper {
@@ -230,6 +230,18 @@
 
     .days-timer {
         padding: 10px 15px;
+    }
+
+    .bulletin-board__title {
+        font-size: 16px;
+    }
+    
+    .bulletin-board__text {
+        font-size: 14px;
+    }
+
+    .bulletin-board__author {
+        font-size: 12px;
     }
 }
 
