--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@
     padding: 10px 35px;
 }
 
+.title {
+    font-weight: 300;
+}
+
+.button {
+    max-width: 150px;
+    background-color: #460EDE;
+    color: #ffffff;
+    font-weight: 300;
+    padding: 10px 30px;
+    border-radius: 10px;
+    box-shadow: 0 3px 6px #00000029;
+}
+
 .header__wrapper {
     padding: 25px 20px;
     display: flex;
@@ -10,6 +24,12 @@
 
 .header__logo-wrapper {
     width: 41%;
+    max-width: 155px;
+}
+
+.header__button {
+    display: none;
+    width: 130px;
 }
 
 .sitetoolbar {
@@ -21,10 +41,6 @@
     position: relative;
     width: 45px;
     height: 21px;
-}
-
-.title {
-    font-weight: 300;
 }
 
 .sitetoolbar__button-line, .sitetoolbar__button-line::before, .sitetoolbar__button-line::after {
@@ -198,17 +214,6 @@
     padding: 20px 0;
 }
 
-.button {
-    background-color: #460EDE;
-    padding: 10px 30px;
-    border-radius: 10px;
-    box-shadow: 0 3px 6px #00000029;
-}
-
-.bulletin-board__button {
-    font-weight: 300;
-}
-
 @media (min-width: 360px) {
     .days-timer__text {
         font-size: 14px;
@@ -256,6 +261,11 @@
     .wrapper {
         max-width: 600px;
         margin: 0 auto;
+        padding: 10px 0;
+    }
+
+    .header__wrapper {
+        padding: 25px 0;
     }
 
     .main__content {
@@ -284,5 +294,41 @@
 
     .menu__section {
         width: 100%;
+    }
+
+    .bulletin-board__announcements {
+        padding: 25px 15px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .wrapper {
+        max-width: 1100px;
+        padding: 10px 80px;
+    }
+
+    .header__wrapper {
+        max-width: 1200px;
+        padding: 30px 40px;
+    }
+
+    .sitetoolbar {
+        display: none;
+    }
+
+    .header__button {
+        display: block;
+    }
+
+    .main__content {
+        grid-template-columns: 1.65fr 1fr;
+        grid-template-rows: 1fr 90px;
+        grid-column-gap: 50px;
+        grid-row-gap: 30px;
+        padding: 30px 0;
+    }
+
+    .main__bulletin-board {
+        grid-area: 1 / 2 / 3 / 3;
     }
 }
