--- a/style.css
+++ b/style.css
@@ -214,6 +214,95 @@
     padding: 20px 0;
 }
 
+.modal-wrapper {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    z-index: 5;
+}
+
+.modal-wrapper.active {
+    display: flex;
+}
+
+.modal {
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 40px 15px;
+    padding-top: 60px;
+}
+
+.modal__content {
+    width: 100%;
+    max-width: 430px;
+    margin: 0 auto;
+}
+
+.modal__close-button-wrapper {
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    width: 22px;
+    height: 22px;
+}
+
+.modal__close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal__title {
+    font-size: 20px;
+    margin-bottom: 24px;
+}
+
+.modal__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal__input {
+    width: 100%;
+    margin-bottom: 24px;
+    height: 40px;
+    border: 1px solid #bebebe;
+    border-radius: 10px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 14px;
+    color: #242424;
+}
+
+.modal__textarea {
+    width: 100%;
+    margin-bottom: 24px;
+    border: 1px solid #bebebe;
+    border-radius: 10px;
+    height: 120px;
+    padding: 10px 15px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    resize: none;
+}
+
+.modal__textarea--mb40 {
+    margin-bottom: 40px;
+}
+
+
+
 @media (min-width: 360px) {
     .days-timer__text {
         font-size: 14px;
