--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@
     right: 2%;
 }
 
-.bulletin-board {
+.announcement-board {
     background-color: #ffffff;
     color: #ffffff;
     box-shadow: 0 3px 6px #0000003c;
@@ -164,17 +164,17 @@
     justify-content: flex-start;
 }
 
-.bulletin-board__title-wrapper {
+.announcement-board__title-wrapper {
     background-color: #242424;
     border-radius: 10px 10px 0 0;
     padding: 10px 10px;
 }
 
-.bulletin-board__title {
+.announcement-board__title {
     font-size: 14px;
 }
 
-.bulletin-board__announcements-wrapper {
+.announcement-board__announcements-wrapper {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
@@ -183,7 +183,7 @@
     border-radius: 0 0 10px 10px;
 }
 
-.bulletin-board__announcements {
+.announcement-board__announcements {
     padding: 25px 10px;
     padding-bottom: 10px;
     display: flex;
@@ -193,7 +193,7 @@
     overflow-y: scroll;
 }
 
-.bulletin-board__announcement {
+.announcement-board__announcement {
     width: 100%;
     background-color: #242424;
     border-radius: 20px;
@@ -202,22 +202,22 @@
     margin-bottom: 20px;
 }
 
-.bulletin-board__announcement:last-of-type {
+.announcement-board__announcement:last-of-type {
     margin-bottom: 0;
 }
 
-.bulletin-board__text {
+.announcement-board__text {
     word-wrap: break-word;
     font-size: 12px;
 }
 
-.bulletin-board__author {
+.announcement-board__author {
     word-wrap: break-word;
     font-size: 10px;
     text-decoration: underline;
 }
 
-.bulletin-board__button-wrapper {
+.announcement-board__button-wrapper {
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
@@ -336,15 +336,15 @@
         padding: 10px 15px;
     }
 
-    .bulletin-board__title {
+    .announcement-board__title {
         font-size: 16px;
     }
     
-    .bulletin-board__text {
+    .announcement-board__text {
         font-size: 14px;
     }
 
-    .bulletin-board__author {
+    .announcement-board__author {
         font-size: 12px;
     }
 }
@@ -387,7 +387,7 @@
         padding: 0;
     }
 
-    .main__bulletin-board {
+    .main__announcement-board {
         grid-area: 3 / 1 / 4 / 2;
     }
 
@@ -395,7 +395,7 @@
         width: 100%;
     }
 
-    .bulletin-board__announcements {
+    .announcement-board__announcements {
         padding: 25px 15px;
         padding-bottom: 10px;
         height: 320px;
@@ -429,7 +429,7 @@
         padding: 30px 0;
     }
 
-    .main__bulletin-board {
+    .main__announcement-board {
         grid-area: 1 / 2 / 3 / 3;
     }
 }
@@ -467,15 +467,15 @@
         max-width: 132px;
     }
 
-    .bulletin-board__title {
+    .announcement-board__title {
         font-size: 20px;
     }
 
-    .bulletin-board__text {
+    .announcement-board__text {
         font-size: 17px;
     }
 
-    .bulletin-board__author {
+    .announcement-board__author {
         font-size: 12px;
     }
 
