added side menu to mobile

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, .8);
     justify-content: center;
     align-items: center;
     padding: 0 20px;
@@ -315,7 +315,111 @@
     margin-bottom: 40px;
 }
 
+.sitetoolbar__circle-background {
+    width: 0;
+    height: 0;
+    position: fixed;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, .8);
+    transition: width .3s ease-in-out, height .3s ease-in-out;
+    z-index: 6;
+}
 
+.sitetoolbar__circle-background--active {
+    height: 290%;
+    width: 290%;
+}
+
+.sitetoolbar__sections {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 7;
+    justify-content: center;
+    align-items: center;
+}
+
+.sitetoolbar__sections--active {
+    display: flex;
+}
+
+.sitetoolbar__sections-list {
+    opacity: 0;
+    margin-top: 100px;
+    transition: opacity .2s, margin .2s;
+}
+
+.sitetoolbar__sections-list--active {
+    opacity: 1;
+    margin-top: 0;
+}
+
+.sitetoolbar__section {
+    margin-right: 35px;
+    padding-bottom: 5px;
+}
+
+.sitetoolbar__section:last-of-type {
+    margin-right: 0;
+}
+
+.sitetoolbar__section--current {
+    border-bottom: 2px solid #ffffff;
+}
+
+.sitetoolbar__close-button-wrapper {
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 65px;
+    right: 40px;
+}
+
+.sitetoolbar__close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    margin-top: 100px;
+    transition: opacity .2s, margin .2s;
+}
+
+.sitetoolbar__close-button--active {
+    opacity: 1;
+    margin-top: 0;
+}
+
+.sitetoolbar__sections-list {
+    display: flex;
+}
+
+.sitetoolbar__section-button {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.sitetoolbar__section-image-wrapper {
+    margin-bottom: 10px;
+}
+
+.sitetoolbar__section-image {
+    height: 35px;
+}
+
+.sitetoolbar__section-title {
+    max-width: 65px;
+    font-size: 15px;
+    color: #ffffff;
+}
 
 @media (min-width: 360px) {
     .days-timer__text {
@@ -357,6 +461,20 @@
     .wrapper {
         max-width: 420px;
         margin: 0 auto;
+    }
+
+    .sitetoolbar__section-image {
+        height: 65px;
+    }
+
+    .sitetoolbar__section {
+        margin-right: 70px;
+        padding-bottom: 10px;
+    }
+
+    .sitetoolbar__close-button-wrapper {
+        top: 12%;
+        right: 10%;
     }
 }
 
@@ -403,6 +521,18 @@
         padding: 25px 15px;
         padding-bottom: 10px;
         height: 320px;
+    }
+
+    .sitetoolbar__section--current {
+        border-bottom-width: 3px;
+    }
+
+    .sitetoolbar__section-image {
+        height: 75px;
+    }
+
+    .sitetoolbar__section {
+        margin-right: 100px;
     }
 }
 
