--- a/style.css
+++ b/style.css
@@ -421,6 +421,15 @@
     color: #ffffff;
 }
 
+.easter-egg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 24px;
+}
+
 @media (min-width: 360px) {
     .days-timer__text {
         font-size: 14px;
