--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@
     width: 45px;
     height: 2px;
     background-color: #222222;
+    transition: width .2s;
+}
+
+.sitetoolbar__button-line--active, .sitetoolbar__button-line--active::before, .sitetoolbar__button-line--active::after {
+    width: 0;
 }
 
 .sitetoolbar__button-line::before, .sitetoolbar__button-line::after {
@@ -363,6 +368,7 @@
 .sitetoolbar__section {
     margin-right: 35px;
     padding-bottom: 5px;
+    color: #ffffff;
 }
 
 .sitetoolbar__section:last-of-type {
@@ -411,6 +417,10 @@
     margin-bottom: 10px;
 }
 
+.sitetoolbar__section-image--desktop {
+    display: none;
+}
+
 .sitetoolbar__section-image {
     height: 35px;
 }
@@ -418,7 +428,6 @@
 .sitetoolbar__section-title {
     max-width: 65px;
     font-size: 15px;
-    color: #ffffff;
 }
 
 .easter-egg {
@@ -547,18 +556,114 @@
 
 @media (min-width: 1024px) {
     .wrapper {
-        max-width: 1100px;
+        max-width: 950px;
         padding: 10px 80px;
     }
 
     .header__wrapper {
-        max-width: 1200px;
+        max-width: 1050px;
         padding: 30px 40px;
     }
 
     .sitetoolbar {
+        position: fixed;
+        transform: translate(0, -50%);
+        top: 50%;
+        left: 2%;
+    }
+
+    .sitetoolbar__button {
+        height: 60px;
+        width: 19px;
+    }
+
+    .sitetoolbar__button-line::before {
         display: none;
     }
+
+    .sitetoolbar__button-line, .sitetoolbar__button-line::after {
+        top: 0;
+        width: 3px;
+        height: 60px;
+        margin-top: 0;
+        transition: height .2s;
+    }
+
+    .sitetoolbar__button-line--active, .sitetoolbar__button-line--active::after {
+        height: 0;
+    }
+
+    .sitetoolbar__button-line::after {
+        transform: translate(15px, 0);
+    }
+
+    .sitetoolbar__circle-background {
+        display: none;
+    }
+
+    .sitetoolbar__close-button-wrapper {
+        display: none;
+    }
+
+    .sitetoolbar__sections {
+        justify-content: flex-start;
+    }
+
+    .sitetoolbar__sections-list {
+        flex-direction: column;
+        background-color: #f7f5f8;
+        margin-top: 0;
+        margin-left: -100px;
+        border-radius: 10px;
+    }
+
+    .sitetoolbar__sections-list--active {
+        margin-left: 0;
+    }
+
+    .sitetoolbar__section {
+        margin-right: 0;
+        width: 70px;
+        border: 1px solid #333333;
+        padding-bottom: 0;
+        color: #000000;
+    }
+
+    .sitetoolbar__section--current {
+        color: #ffffff;
+    }
+
+    .sitetoolbar__section:first-of-type {
+        border-radius: 10px 10px 0 0;
+    }
+
+    .sitetoolbar__section:last-of-type {
+        border-radius: 0 0 10px 10px;
+    }
+
+    .sitetoolbar__section--current {
+        background-color: #333333;
+        border-color: 
+    }
+
+    .sitetoolbar__section-button {
+        width: 100%;
+        padding: 15px 0;
+    }
+
+    .sitetoolbar__section-image {
+        height: 50px;
+    }
+
+    .sitetoolbar__section-image--mobile {
+        display: none;
+    }
+
+    .sitetoolbar__section-image--desktop {
+        display: block;
+    }
+
+
 
     .header__button {
         display: block;
