--- a/global-styles.css
+++ b/global-styles.css
@@ -27,6 +27,17 @@ input {
     border: none;
 }
 
+.input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #bebebe;
+    border-radius: 10px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 14px;
+    color: #242424;
+}
+
 button:focus,
 input:focus,
 textarea:focus,
