--- a/add-project/style.css
+++ b/add-project/style.css
@@ -2,8 +2,12 @@ body {
     min-height: 100vh;
 }
 
+.add-project__wrapper {
+    padding: 10px 20px;
+}
+
 .main__title {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
 }
 
 .add-project {
@@ -16,11 +20,11 @@ body {
     background-color: #ffffff;
     border-radius: 10px 10px 0 0;
     box-shadow: 0 3px 6px #0000003c;
-    padding: 25px 15px;
-    padding-bottom: 50px;
+    padding: 0 15px;
+    padding-top: 25px;
 }
 
-.add-project__project-introduction-title {
+.add-project__main-content-title {
     font-weight: 300;
     font-size: 21px;
     text-align: center;
@@ -31,9 +35,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 50px;
 }
 
-.add-project__download-file-input {
+.add-project__file-input {
+    display: none;
     outline: 0;
     opacity: 0;
     pointer-events: none;
@@ -46,7 +52,7 @@ body {
     z-index: -1;
 }
 
-.add-project__download-file-button-wrapper {
+.add-project__clip-image-button-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,7 +64,7 @@ body {
     margin-bottom: 25px;
 }
 
-.add-project__download-file-button {
+.add-project__clip-image-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -83,7 +89,7 @@ body {
 
 .add-project__input-select {
     padding: 0 12px;
-    font-weight: 500;
+    background-color: #ffffff;
 }
 
 .add-project__steps {
@@ -102,6 +108,7 @@ body {
 }
 
 .steps__switch-step-button-title {
+    display: none;
     font-size: 17px;
     color: #ffffff;
 }
@@ -145,62 +152,130 @@ body {
     transform: rotate(180deg);
 }
 
+.add-project__project-description-form {
+    max-width: 450px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+}
+
+.add-project__project-description-paragraph {
+    text-align: center;
+    font-weight: 300;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.add-project__project-description-textarea {
+    margin-bottom: 25px;
+}
+
+.add-project__clip-file-paragraph {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.add-project__clip-file-button-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 300px;
+}
+
+.add-project__clip-file-image-wrapper {
+    min-width: 33px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (min-width: 420px) {
-    .add-project__download-file-button-wrapper {
+    .add-project__clip-image-button-wrapper {
         min-width: 150px;
         min-height: 150px;
     }
 
-    .add-project__download-file-button {
+    .add-project__clip-image-button {
         width: 40px;
         height: 40px;
     }
 }
 
+@media (min-width: 768px) {
+    .steps__switch-step-button-title {
+        display: inline-block;
+    }
+
+    .add-project__wrapper {
+        padding: 10px 0;
+    }
+}
+
 @media (min-width: 1024px) {
+    .add-project__wrapper {
+        padding: 10px 80px;
+    }
+
+    .main__title {
+        margin-bottom: 50px;
+    }
+
     .add-project__project-introduction-form {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding-bottom: 90px;
     }
 
-    .add-project__download-file-button-wrapper {
+    .add-project__clip-image-button-wrapper {
         margin-bottom: 0;
         min-width: 205px;
         min-height: 198px;
     }
 
-    .add-project__download-file-button {
+    .add-project__clip-image-button {
         width: 50px;
         height: 50px;
     }
 
     .add-project__main-content {
-        padding: 45px 90px;
-        padding-bottom: 90px;
+        padding: 0 90px;
+        padding-top: 45px;
     }
 
-    .add-project__project-introduction-title {
+    .add-project__main-content-title {
         margin-bottom: 35px;
+    }
+
+    .add-project__project-description-form {
+        padding-bottom: 65px;
     }
 }
 
 @media (min-width: 1300px) {
-    .add-project__download-file-button-wrapper {
+    .add-project__clip-image-button-wrapper {
         min-width: 240px;
         min-height: 232px;
     }
 
-    .add-project__download-file-button {
+    .add-project__clip-image-button {
         width: 64px;
         height: 64px;
     }
 
-    .add-project__project-introduction-title {
+    .add-project__main-content-title {
         font-size: 25px;
     }
 
     .steps__step-number {
         font-size: 20px;
+    }
+
+    .add-project__project-description-paragraph {
+        font-size: 16px;
+        margin-bottom: 35px;
+    }
+
+    .add-project__clip-file-paragraph {
+        font-size: 16px;
     }
 }
