added animation for modals

--- a/general-styles.css
+++ b/general-styles.css
@@ -1,3 +1,49 @@
+@keyframes blowUpContentHide {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    99.9% {
+        transform: scale(2);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
+
+@keyframes blowUpContentShow {
+    0% {
+        transform: scale(2);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes blowUpModalShow {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.content-hidden {
+    animation: blowUpContentHide .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.content-show {
+    animation: blowUpContentShow .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
 .wrapper {
     padding: 10px 35px;
 }
@@ -43,7 +89,9 @@
     height: 21px;
 }
 
-.sitetoolbar__button-line, .sitetoolbar__button-line::before, .sitetoolbar__button-line::after {
+.sitetoolbar__button-line,
+.sitetoolbar__button-line::before,
+.sitetoolbar__button-line::after {
     position: absolute;
     top: 50%;
     left: 0;
@@ -54,11 +102,14 @@
     transition: width .2s;
 }
 
-.sitetoolbar__button-line--active, .sitetoolbar__button-line--active::before, .sitetoolbar__button-line--active::after {
+.sitetoolbar__button-line--active,
+.sitetoolbar__button-line--active::before,
+.sitetoolbar__button-line--active::after {
     width: 0;
 }
 
-.sitetoolbar__button-line::before, .sitetoolbar__button-line::after {
+.sitetoolbar__button-line::before,
+.sitetoolbar__button-line::after {
     content: '';
     display: block;
 }
@@ -83,6 +134,7 @@
     align-items: center;
     padding: 0 20px;
     z-index: 5;
+    animation: blowUpModalShow .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
 .modal-wrapper.active {
@@ -97,6 +149,11 @@
     border-radius: 10px;
     padding: 40px 15px;
     padding-top: 60px;
+    animation: blowUpModalShow .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.modal.hide {
+    animation: blowUpModalHide .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
 .modal__content {
@@ -268,9 +325,7 @@
     font-size: 15px;
 }
 
-@media (min-width: 360px) {
-
-}
+@media (min-width: 360px) {}
 
 @media (min-width: 420px) {
     .wrapper {
@@ -344,7 +399,8 @@
         display: none;
     }
 
-    .sitetoolbar__button-line, .sitetoolbar__button-line::after {
+    .sitetoolbar__button-line,
+    .sitetoolbar__button-line::after {
         top: 0;
         width: 3px;
         height: 60px;
@@ -352,7 +408,8 @@
         transition: height .2s;
     }
 
-    .sitetoolbar__button-line--active, .sitetoolbar__button-line--active::after {
+    .sitetoolbar__button-line--active,
+    .sitetoolbar__button-line--active::after {
         height: 0;
     }
 
@@ -406,7 +463,7 @@
 
     .sitetoolbar__section--current {
         background-color: #333333;
-        border-color: 
+        /* border-color: */
     }
 
     .sitetoolbar__section-button {
