--- a/general-styles.css
+++ b/general-styles.css
@@ -5,7 +5,7 @@
     }
 
     99.9% {
-        transform: scale(2);
+        transform: scale(0.5);
         opacity: 0;
     }
 
@@ -16,7 +16,7 @@
 
 @keyframes blowUpContentShow {
     0% {
-        transform: scale(2);
+        transform: scale(0.5);
         opacity: 0;
     }
 
@@ -33,6 +33,16 @@
 
     100% {
         transform: scale(1);
+    }
+}
+
+@keyframes blowUpModalHide {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
     }
 }
 
@@ -139,6 +149,7 @@
 
 .modal-wrapper.active {
     display: flex;
+    animation: blowUpModalShow .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) backwards;
 }
 
 .modal {
@@ -150,10 +161,6 @@
     padding: 40px 15px;
     padding-top: 60px;
     animation: blowUpModalShow .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-}
-
-.modal.hide {
-    animation: blowUpModalHide .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
 }
 
 .modal__content {
