--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -17,13 +17,35 @@
 }
 
 .modalBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
   position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 70%;
+  max-width: 800px;
+  width: 90%;
   height: 70%;
+  max-height: 387px;
   background-color: #fff;
   z-index: 101;
   overflow-y: auto;
+}
+
+.closeButton {
+  display: inline-block;
+  cursor: pointer;
+  margin-left: calc(100% - 1em);
+  font-size: 2em;
+  color: #a5a4a4;
+  z-index: 1001;
+}
+
+.modalTitle {
+  font-weight: normal;
+  margin-top: 0.5em;
+  margin-bottom: 1.5em;
+  font-size: 1.2em;
 }
