--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -26,26 +26,43 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 800px;
-  width: 90%;
-  height: 70%;
-  max-height: 387px;
+  width: 80%;
+  height: 73%;
+  max-height: 385px;
   background-color: #fff;
   z-index: 101;
-  overflow-y: auto;
+  overflow-y: scroll;
+  border-radius: 10px;
+}
+
+.modalBox::-webkit-scrollbar {
+  display: none;
 }
 
 .closeButton {
-  display: inline-block;
+  position: absolute;
+  right: 0.5em;
   cursor: pointer;
-  margin-left: calc(100% - 1em);
-  font-size: 2em;
+  font-size: 2rem;
   color: #a5a4a4;
   z-index: 1001;
 }
 
 .modalTitle {
   font-weight: normal;
-  margin-top: 0.5em;
-  margin-bottom: 1.5em;
-  font-size: 1.2em;
+  margin-top: 1.2em;
+  margin-bottom: 1.2em;
+  font-size: 2rem;
+}
+
+@media screen and (min-width: 768px) {
+  .modalTitle {
+    margin-top: 1em;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modalBackdrop {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
 }
