added close button component and changed styles

--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -1,7 +1,3 @@
-html {
-  font-size: 10px;
-}
-
 .modalContent {
   max-width: 432px;
   width: 90%;
@@ -11,39 +7,21 @@ html {
 }
 
 .formTitle {
-  font-size: 1.2rem;
+  font-size: 14px;
   border: 1px solid #bebebe;
-  padding: 1em;
-  margin-bottom: 2em;
+  padding: 16px 11px;
+  margin-bottom: 25px;
   border-radius: 10px;
   outline: none;
 }
 
 .formText {
-  font-size: 1.4rem;
+  font-size: 14px;
   border: 1px solid #bebebe;
   resize: none;
-  padding-left: 1em;
-  padding-top: 0.8em;
+  padding: 15px;
   height: 100px;
-  margin-bottom: 2em;
+  margin-bottom: 40px;
   border-radius: 10px;
   outline: none;
-}
-
-.addButton {
-  font-size: 1.2rem;
-  background-color: #460ede;
-  border: none;
-  color: #fff;
-  padding: 1em 2.5em;
-  border-radius: 10px;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.16);
-  margin-bottom: 1em;
-}
-
-@media screen and (min-width: 768px) {
-  html {
-    font-size: 12px;
-  }
 }
