--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -7,9 +7,10 @@
 }
 
 .formTitle {
+  height: 40px;
   font-size: 14px;
   border: 1px solid #bebebe;
-  padding: 16px 11px;
+  padding: 0 15px;
   margin-bottom: 25px;
   border-radius: 10px;
   outline: none;
@@ -20,8 +21,14 @@
   border: 1px solid #bebebe;
   resize: none;
   padding: 15px;
-  height: 100px;
+  height: 120px;
   margin-bottom: 40px;
   border-radius: 10px;
   outline: none;
+
+  @media screen and (min-width: 500px) {
+    & {
+      margin-bottom: 30px;
+    }
+  }
 }
