--- a/src/components/homepage/homepage.module.scss
+++ b/src/components/homepage/homepage.module.scss
@@ -2,3 +2,152 @@
   font-size: 25px;
   font-weight: lighter;
 }
+
+.mainContent {
+  padding: 15px 0;
+
+  @media screen and (min-width: 768px) {
+    & {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 80px 1fr;
+      grid-row-gap: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    & {
+      grid-template-columns: 1.65fr 1fr;
+      grid-template-rows: 1fr 90px;
+      grid-column-gap: 50px;
+      grid-row-gap: 30px;
+      padding: 30px 0;
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    & {
+      grid-column-gap: 100px;
+      grid-row-gap: 35px;
+    }
+  }
+}
+
+.daysTimer {
+  display: flex;
+  justify-content: space-between;
+  padding: 6px 8px;
+  padding-right: 15px;
+  align-items: center;
+  background-color: #242424;
+  color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px #0000003c;
+
+  @media screen and (min-width: 360px) {
+    & {
+      padding: 10px 15px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    & {
+      grid-area: 2 / 1 / 3 / 2;
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    & {
+      padding: 15px 25px;
+      padding-right: 43px;
+      height: 105px;
+    }
+  }
+}
+
+.daysTimerText {
+  font-size: 12px;
+  font-weight: lighter;
+
+  @media screen and (min-width: 360px) {
+    & {
+      font-size: 14px;
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    & {
+      font-size: 20px;
+    }
+  }
+}
+
+.daysTimerCounter {
+  display: flex;
+  align-items: center;
+
+  @media screen and (min-width: 360px) {
+    & {
+      width: 38%;
+      justify-content: flex-end;
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    width: 44%;
+  }
+}
+
+.daysTimerCounterText {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 900;
+  margin-right: 10px;
+
+  @media screen and (min-width: 360px) {
+    & {
+      font-size: 18px;
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    & {
+      font-size: 32px;
+      margin-right: 58px;
+    }
+  }
+}
+
+.daysTimerCounterImg {
+  width: 23px;
+
+  @media screen and (min-width: 1300px) {
+    & {
+      width: 54px;
+    }
+  }
+}
+
+.mainMenu {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-row-gap: 45px;
+  padding: 30px 0;
+
+  @media screen and (min-width: 768px) {
+    & {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-column-gap: 40px;
+      grid-row-gap: 30px;
+      grid-area: 1 / 1 / 2 / 2;
+      padding: 0;
+    }
+  }
+
+  @media screen and (min-width: 1300px) {
+    grid-column-gap: 100px;
+  }
+}
