--- a/src/components/announcement-board/announcement-board.module.scss
+++ b/src/components/announcement-board/announcement-board.module.scss
@@ -1,44 +1,37 @@
 .announcementBoard {
-  background-color: #ffffff;
-  color: #ffffff;
+  background-color: #fff;
+  color: #fff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
 
   @media screen and (min-width: 768px) {
-    & {
-      grid-area: 3 / 1 / 4 / 2;
-    }
+    margin-top: 30px;
   }
 
   @media screen and (min-width: 1024px) {
-    & {
-      grid-area: 1 / 2 / 3 / 3;
-    }
+    margin-top: 0;
+    grid-row: 1/3;
   }
 }
 
 .announcementBoardTitleWrapper {
   background-color: #242424;
   border-radius: 10px 10px 0 0;
-  padding: 10px 10px;
+  padding: 5px 11px;
 }
 
 .announcementBoardTitle {
-  font-size: 14px;
+  font-size: 13px;
+  font-weight: lighter;
 
   @media screen and (min-width: 360px) {
-    & {
-      font-size: 16px;
-    }
+    font-size: 16px;
   }
 
   @media screen and (min-width: 1300px) {
-    & {
-      font-size: 20px;
-    }
+    font-size: 20px;
   }
 }
 
@@ -47,73 +40,69 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #ffffff;
-  border-radius: 0 0 10px 10px;
 }
 
 .announcements {
-  padding: 25px 10px;
-  padding-bottom: 10px;
   display: flex;
+  padding: 22px 11px;
   flex-direction: column;
-  align-items: center;
-  height: 270px;
+  height: 241px;
   overflow-y: scroll;
 
   @media screen and (min-width: 768px) {
-    & {
-      padding: 25px 15px;
-      padding-bottom: 10px;
-      height: 320px;
-    }
+    padding: 25px 15px;
+    height: 291px;
   }
 }
 
 .announcement {
   width: 100%;
+  padding: 4px 14px 7px 14px;
+  background-color: #242424;
+  box-shadow: 0 3px 6px #00000029;
+  border-radius: 15px;
+  margin-bottom: 16px;
   display: flex;
   flex-direction: column;
-  background-color: #242424;
-  border-radius: 20px;
-  box-shadow: 0 3px 6px #00000029;
-  padding: 10px 15px;
-  margin-bottom: 20px;
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 27px;
+  }
 }
 
 .announcementText {
-  word-wrap: break-word;
   font-size: 12px;
-  margin-bottom: 4px;
+  text-align: left;
+  word-wrap: break-word;
+  font-weight: lighter;
 
   @media screen and (min-width: 360px) {
-    & {
-      font-size: 14px;
-    }
+    font-size: 14px;
   }
 
   @media screen and (min-width: 1300px) {
-    & {
-      font-size: 17px;
-    }
+    font-size: 17px;
   }
 }
 
 .announcementAuthor {
   color: #fff;
-  word-wrap: break-word;
   font-size: 10px;
   text-decoration: underline;
+  word-wrap: break-word;
+  font-weight: lighter;
 
   @media screen and (min-width: 360px) {
-    & {
-      font-size: 11px;
-    }
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 1300px) {
+    font-size: 14px;
   }
 }
 
 .announcementsButtonWrapper {
   display: flex;
   justify-content: center;
-  padding-bottom: 20px;
-  padding-top: 30px;
+  margin-bottom: 20px;
 }
