--- a/src/components/homepage/homepage.module.scss
+++ b/src/components/homepage/homepage.module.scss
@@ -1,153 +1,112 @@
 .homeTitle {
   font-size: 25px;
-  font-weight: lighter;
 }
 
 .mainContent {
   padding: 15px 0;
 
   @media screen and (min-width: 768px) {
-    & {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 80px 1fr;
-      grid-row-gap: 30px;
-    }
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 56px 1fr;
   }
 
   @media screen and (min-width: 1024px) {
-    & {
-      grid-template-columns: 1.65fr 1fr;
-      grid-template-rows: 1fr 90px;
-      grid-column-gap: 50px;
-      grid-row-gap: 30px;
-      padding: 30px 0;
-    }
+    margin-top: 32px;
+    column-gap: 35px;
+    grid-template-columns: 1.7fr 1fr;
+    grid-template-rows: 1fr 104px;
   }
 
   @media screen and (min-width: 1300px) {
-    & {
-      grid-column-gap: 100px;
-      grid-row-gap: 35px;
-    }
+    column-gap: 97px;
   }
 }
 
 .daysTimer {
   display: flex;
-  justify-content: space-between;
-  padding: 6px 8px;
-  padding-right: 15px;
-  align-items: center;
   background-color: #242424;
-  color: #ffffff;
+  color: #fff;
   border-radius: 10px;
   box-shadow: 0 3px 6px #0000003c;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px 14px 7px 8px;
 
   @media screen and (min-width: 360px) {
-    & {
-      padding: 10px 15px;
-    }
+    padding: 10px 15px 10px 15px;
   }
 
   @media screen and (min-width: 768px) {
-    & {
-      grid-area: 2 / 1 / 3 / 2;
-    }
+    grid-row-start: 2;
   }
 
-  @media screen and (min-width: 1300px) {
-    & {
-      padding: 15px 25px;
-      padding-right: 43px;
-      height: 105px;
-    }
+  @media screen and (min-width: 1024px) {
+    padding: 11px 43px 9px 25px;
   }
 }
 
 .daysTimerText {
   font-size: 12px;
-  font-weight: lighter;
 
   @media screen and (min-width: 360px) {
-    & {
-      font-size: 14px;
-    }
+    font-size: 14px;
   }
 
-  @media screen and (min-width: 1300px) {
-    & {
-      font-size: 20px;
-    }
+  @media screen and (min-width: 1024px) {
+    font-size: 20px;
   }
 }
 
 .daysTimerCounter {
   display: flex;
   align-items: center;
-
-  @media screen and (min-width: 360px) {
-    & {
-      width: 38%;
-      justify-content: flex-end;
-    }
-  }
-
-  @media screen and (min-width: 1300px) {
-    width: 44%;
-  }
 }
 
 .daysTimerCounterText {
   font-size: 16px;
-  font-style: italic;
   font-weight: 900;
-  margin-right: 10px;
+  font-style: italic;
+  margin-right: 9px;
 
   @media screen and (min-width: 360px) {
-    & {
-      font-size: 18px;
-    }
+    font-size: 18px;
+    margin-right: 16px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 32px;
+    margin-right: 30px;
   }
 
   @media screen and (min-width: 1300px) {
-    & {
-      font-size: 32px;
-      margin-right: 58px;
-    }
+    margin-right: 58px;
   }
 }
 
 .daysTimerCounterImg {
   width: 23px;
+  height: 36px;
 
-  @media screen and (min-width: 1300px) {
-    & {
-      width: 54px;
-    }
+  @media screen and (min-width: 1024px) {
+    width: 54px;
+    height: 84px;
   }
 }
 
 .mainMenu {
+  padding: 32px 0;
   display: grid;
-  justify-items: center;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, 1fr);
-  grid-row-gap: 45px;
-  padding: 30px 0;
+  row-gap: 33px;
 
   @media screen and (min-width: 768px) {
-    & {
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: repeat(2, 1fr);
-      grid-column-gap: 40px;
-      grid-row-gap: 30px;
-      grid-area: 1 / 1 / 2 / 2;
-      padding: 0;
-    }
+    padding: 0 0;
+    padding-bottom: 35px;
+    row-gap: 43px;
+    grid-template-columns: 1fr 1fr;
   }
 
-  @media screen and (min-width: 1300px) {
-    grid-column-gap: 100px;
+  @media screen and (min-width: 1024px) {
+    column-gap: 40px;
   }
 }
