--- a/src/components/menu-card/menu-card.module.scss
+++ b/src/components/menu-card/menu-card.module.scss
@@ -1,68 +1,141 @@
 .menuCard {
+  justify-self: center;
+  width: 100%;
+  max-width: 256px;
+  position: relative;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 10px;
-  width: 82%;
-  border-radius: 10px;
-  background: linear-gradient(to bottom, #ffffff 82%, #242424 18%);
+  flex-direction: column;
   box-shadow: 0 3px 6px #0000003c;
+  border-radius: 10px;
+  height: 120px;
+  background: #fff;
 
   @media screen and (min-width: 768px) {
     & {
-      width: 100%;
+      height: 150px;
+      max-width: 271px;
     }
+
+    &:nth-child(2n) {
+      justify-self: end;
+    }
+
+    &:nth-child(2n + 1) {
+      justify-self: start;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    min-width: 256px;
+  }
+
+  @media screen and (min-width: 1300px) {
+    max-width: 300px;
+  }
+}
+
+.menuCardContent {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+
+  @media screen and (min-width: 768px) {
+    height: 120px;
   }
 }
 
 .menuCardTitle {
-  margin-bottom: 20px;
-  text-align: left;
   font-size: 14px;
-  max-width: 92px;
-  word-wrap: break-word;
+  color: #4e4d4d;
+  line-height: 20px;
+  word-spacing: 20px;
+  max-width: 109px;
+  padding-left: 16px;
 
   @media screen and (min-width: 360px) {
-    & {
-      font-size: 16px;
-      max-width: 108px;
-    }
+    font-size: 16px;
   }
 
   @media screen and (min-width: 1300px) {
-    & {
-      font-size: 20px;
-      max-width: 132px;
-    }
+    font-size: 20px;
+    line-height: 30px;
   }
 }
 
 .menuCardImgProjectsSearch {
-  width: 43%;
   position: relative;
-  right: 4%;
+  z-index: 2;
+  width: 92px;
+  height: 93px;
+  top: 3px;
+  right: 10px;
+
+  @media screen and (min-width: 768px) {
+    width: 110px;
+    height: 111px;
+    top: 5px;
+  }
 }
 
-.menuCardImgCreateProject {
-  width: 58%;
+.menuCardImgEngeneerActivity {
   position: relative;
-  bottom: 12px;
+  z-index: 2;
+  width: 98px;
+  height: 95px;
+  top: 3px;
+  right: 3px;
+
+  @media screen and (min-width: 768px) {
+    width: 119px;
+    height: 122px;
+    top: 15px;
+  }
 }
 
-.menuCardImgProjectActivity {
-  width: 31%;
+.menuCardImgInitiativeProject {
   position: relative;
+  z-index: 2;
+  width: 114px;
+  height: 121px;
   bottom: 5px;
-  right: 2%;
+
+  @media screen and (min-width: 768px) {
+    width: 154px;
+    height: 155px;
+    left: 10px;
+    bottom: 10px;
+  }
 }
 
-.menuCardImgHackathon {
-  width: 51%;
+.menuCardImgPartnersProjects {
   position: relative;
+  z-index: 2;
+  width: 120px;
+  height: 98px;
   top: 10px;
+
+  @media screen and (min-width: 768px) {
+    width: 128px;
+    height: 123px;
+    top: 30px;
+  }
 }
 
 .menuCardImg {
   width: 100%;
-  height: auto;
+}
+
+.blackBorderBottom {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  background-color: #242424;
+  height: 21px;
+  border-radius: 0 0 10px 10px;
+
+  @media screen and (min-width: 768px) {
+    height: 30px;
+  }
 }
