--- a/src/components/announcement-board/announcement-board.module.scss
+++ b/src/components/announcement-board/announcement-board.module.scss
@@ -20,6 +20,10 @@
   background-color: #242424;
   border-radius: 10px 10px 0 0;
   padding: 5px 11px;
+
+  @media screen and (min-width: 1024px) {
+    padding: 7.5px 16px;
+  }
 }
 
 .announcementBoardTitle {
@@ -30,7 +34,7 @@
     font-size: 16px;
   }
 
-  @media screen and (min-width: 1300px) {
+  @media screen and (min-width: 1024px) {
     font-size: 20px;
   }
 }
@@ -65,8 +69,13 @@
   display: flex;
   flex-direction: column;
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   @media screen and (min-width: 1024px) {
     margin-bottom: 27px;
+    padding: 8px 15px 11px 15px;
   }
 }
 
