--- a/src/components/announcement-board/announcement-board.module.scss
+++ b/src/components/announcement-board/announcement-board.module.scss
@@ -5,6 +5,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  min-height: 150px;
 
   @media screen and (min-width: 768px) {
     margin-top: 30px;
@@ -114,4 +115,17 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+}
+
+.noAnnouncementsWrapper {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.noAnnouncementsTitle {
+  font-size: 17px;
+  color: #242424;
+  font-weight: lighter;
 }
