--- a/src/components/announcements-page/announcements-page.module.scss
+++ b/src/components/announcements-page/announcements-page.module.scss
@@ -12,6 +12,17 @@
   @media screen and (min-width: 400px) {
     position: static;
   }
+
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    column-gap: 20px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
 }
 
 .selectedAnnouncement {
@@ -56,7 +67,8 @@
   padding-top: 40px;
   display: grid;
   align-content: center;
-  grid-template-columns: 1fr 4.5fr;
+  column-gap: 11px;
+  width: fit-content;
 }
 
 .authorImage {
@@ -91,4 +103,63 @@
 .rightArrow {
   width: 16px;
   height: 22px;
+}
+
+.announcements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 49px;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 0;
+  }
+}
+
+.announcement {
+  background-color: #fff;
+  box-shadow: 0 3px 6px #0000003c;
+  border-radius: 10px;
+  display: grid;
+  align-content: center;
+  grid-template-columns: 33px 1fr;
+  column-gap: 11px;
+  width: fit-content;
+  column-gap: 11px;
+  height: 96px;
+  margin-bottom: 25px;
+  padding: 16px 20px 18px 16px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  ._text {
+    font-size: 15px;
+    font-weight: lighter;
+    grid-column: 1/3;
+    margin-bottom: 11px;
+    white-space: nowrap; /* Запрещаем перенос строк */
+    overflow: hidden; /* Обрезаем все, что не помещается в область */
+    text-overflow: ellipsis; /* Добавляем многоточие */
+  }
+
+  ._authorImage {
+    width: 33px;
+    height: 33px;
+    grid-row: 2/4;
+  }
+
+  ._author {
+    font-size: 11px;
+    color: #242424;
+    font-weight: bold;
+  }
+
+  ._date {
+    font-size: 10px;
+    font-weight: bold;
+    color: #b1b1b1;
+    grid-column: 2/3;
+  }
 }
