--- a/src/components/announcements-page/announcements-page.module.scss
+++ b/src/components/announcements-page/announcements-page.module.scss
@@ -29,6 +29,7 @@
   background-color: #fff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
+  position: relative;
 
   .content {
     padding: 24px 27px 16px 15px;
@@ -36,13 +37,45 @@
     .title {
       font-size: 21px;
       font-weight: lighter;
+
+      @media screen and (min-width: 1024px) {
+        font-size: 25px;
+      }
     }
 
     .text {
       font-size: 13px;
-      padding-top: 16px;
       line-height: 22px;
+      max-height: 130px;
+      overflow-y: scroll;
+
+      @media screen and (min-width: 768px) {
+        font-size: 15px;
+      }
+
+      @media screen and (min-width: 1024px) {
+        font-size: 17px;
+        line-height: 23px;
+        max-height: 184px;
+      }
     }
+  }
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 24px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    margin-bottom: 32px;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -50,17 +83,38 @@
   padding-top: 16px;
   display: flex;
   align-items: center;
+
+  @media screen and (min-width: 1024px) {
+    padding-top: 0;
+  }
 }
 
 .saveButtonText {
   font-size: 11px;
   font-weight: lighter;
   margin-left: 7px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 13px;
+  }
 }
 
 .starButton {
+  position: relative;
   width: 24px;
   height: 22px;
+
+  svg {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 15px;
+    height: 14px;
+  }
 }
 
 .authorWrapper {
@@ -75,11 +129,20 @@
   width: 33px;
   height: 33px;
   grid-row: 1/3;
+
+  @media screen and (min-width: 1024px) {
+    width: 42px;
+    height: 42px;
+  }
 }
 
 .authorName {
   font-size: 11px;
   font-weight: bold;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 15px;
+  }
 }
 
 .publishDate {
@@ -87,6 +150,10 @@
   font-weight: bold;
   color: #b1b1b1;
   grid-column: 2/3;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 13px;
+  }
 }
 
 .controlPanel {
@@ -97,12 +164,71 @@
   background-color: #000;
   border-radius: 0 0 10px 10px;
   height: 51px;
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+}
+
+.leftPanelSide,
+.rightPanelSide {
+  display: flex;
+}
+
+.leftPanelText,
+.rightPanelText {
+  color: #fff;
+  font-size: 11px;
+  font-weight: lighter;
+  text-transform: uppercase;
+
+  @media screen and (min-width: 768px) {
+    font-size: 13px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    font-size: 15px;
+  }
+}
+
+.rightPanelText {
+  display: none;
+
+  @media screen and (min-width: 1024px) {
+    display: block;
+  }
 }
 
 .leftArrow,
 .rightArrow {
+  cursor: pointer;
   width: 16px;
   height: 22px;
+}
+
+.leftArrow {
+  margin-right: 16px;
+  display: none;
+
+  @media screen and (min-width: 1024px) {
+    display: block;
+  }
+
+  img {
+    height: 22px;
+  }
+}
+
+.rightArrow {
+  margin-left: 16px;
+}
+
+.rightArrow {
+  img {
+    height: 22px;
+  }
 }
 
 .announcements {
@@ -124,8 +250,7 @@
   align-content: center;
   grid-template-columns: 33px 1fr;
   column-gap: 11px;
-  width: fit-content;
-  column-gap: 11px;
+  max-width: 270px;
   height: 96px;
   margin-bottom: 25px;
   padding: 16px 20px 18px 16px;
@@ -139,9 +264,9 @@
     font-weight: lighter;
     grid-column: 1/3;
     margin-bottom: 11px;
-    white-space: nowrap; /* Запрещаем перенос строк */
-    overflow: hidden; /* Обрезаем все, что не помещается в область */
-    text-overflow: ellipsis; /* Добавляем многоточие */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   ._authorImage {
