--- a/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
+++ b/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
@@ -23,13 +23,12 @@
   padding: 5px 11px;
 
   @media screen and (min-width: 1024px) {
-    padding: 7.5px 16px;
+    padding: 8px 16px;
   }
 }
 
 .announcementBoardTitle {
   font-size: 13px;
-  font-weight: lighter;
 
   @media screen and (min-width: 360px) {
     font-size: 16px;
@@ -89,7 +88,7 @@
 
   @media screen and (min-width: 1024px) {
     margin-bottom: 27px;
-    padding: 8px 15px 11px 15px;
+    padding: 10px 15px 13px 15px;
   }
 }
 
@@ -98,10 +97,10 @@
   font-size: 12px;
   text-align: left;
   width: 200px;
-  font-weight: lighter;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  margin-bottom: 5px;
 
   @media screen and (min-width: 360px) {
     width: 230px;
@@ -123,15 +122,10 @@
   font-size: 10px;
   text-decoration: underline;
   word-wrap: break-word;
-  font-weight: lighter;
   text-align: left;
 
-  @media screen and (min-width: 360px) {
-    font-size: 12px;
-  }
-
-  @media screen and (min-width: 1300px) {
-    font-size: 14px;
+  @media screen and (min-width: 768px) {
+    font-size: 11px;
   }
 }
 
