--- a/src/components/Homepage/Homepage.module.scss
+++ b/src/components/Homepage/Homepage.module.scss
@@ -1,5 +1,10 @@
 .homeTitle {
+  font-weight: 300;
   font-size: 25px;
+
+  @media (min-width: 768px) {
+    font-size: 32px;
+  }
 }
 
 .mainContent {
@@ -65,7 +70,7 @@
 
 .daysTimerCounterText {
   font-size: 16px;
-  font-weight: 900;
+  font-weight: 700;
   font-style: italic;
   margin-right: 9px;
 
