changed shadow color

--- a/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
+++ b/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
@@ -77,7 +77,7 @@
   height: 41px;
   padding: 4px 14px 7px 14px;
   background-color: #242424;
-  box-shadow: 0 3px 6px #00000029;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
   border-radius: 15px;
   margin-bottom: 16px;
   display: flex;
