--- a/src/components/ProjectAboutCompany/ProjectAboutCompany.module.scss
+++ b/src/components/ProjectAboutCompany/ProjectAboutCompany.module.scss
@@ -10,7 +10,7 @@
 .aboutCompanyInfo {
   @media (min-width: 1024px){
     max-width: 324px;
-    margin-right: 20px;
+    margin-right: 136px;
   }
 }
 
@@ -44,13 +44,13 @@
   margin-bottom: 43px;
 }
 
-.benefit {
-  display: flex;
-  align-items: center;
-
-  &:not(:last-of-type) {
+.benefit:not(:last-of-type) {
     margin-bottom: 28px;
   }
+
+.benefitWrapper {
+  display: inline-flex;
+  align-items: center;
 }
 
 .benefitIcon {
@@ -75,9 +75,6 @@
 .addInfo {
   font-size: 13px;
   line-height: 22px;
-  max-height: 250px;
-  overflow-y: auto;
-  white-space: wrap;
 
   @media (min-width: 768px) {
     font-size: 15px;
