--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -19,9 +19,25 @@
   }
 }
 
+.tabWrapper {
+  position: relative;
+  background-color: #ffffff;
+  box-shadow: 0px 3px 6px 0 rgba(0, 0, 0, 0.1); 
+
+  &:before {
+    content: "";
+    margin: 0;
+    border: none;
+    height: 5px;
+    width: 100%;
+    top: -5px;
+    position: absolute;
+    background: inherit;
+  }
+}
+
 .tabContent {
   background: #ffffff;
-  box-shadow: 0px 6px 6px 0px rgba(0,0,0,0.1);
   border-radius: 0px 0px 10px 10px;
   padding: 24px 16px;
 
