--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -16,8 +16,9 @@
   border-radius: 10px;
   font-size: 14px;
   font-weight: 200;
-  color: white;
-  background-color: black;
+  color: #ffffff;
+  background-color: #000000;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
 }
 
 .detailed {
