--- a/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
+++ b/src/components/AnnouncementBoard/AnnouncementBoard.module.scss
@@ -1,6 +1,6 @@
 .announcementBoard {
-  background-color: #ffffff;
-  color: #ffffff;
+  background-color: #fff;
+  color: #fff;
   box-shadow: 0 3px 6px #0000003c;
   border-radius: 10px;
   display: flex;
@@ -18,7 +18,7 @@
 }
 
 .announcementBoardTitleWrapper {
-  box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.24);
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.24);
   background-color: #242424;
   border-radius: 10px 10px 0 0;
   padding: 5px 11px;
@@ -78,13 +78,13 @@
     padding: 10px 15px 13px 15px;
   }
 
-  @media (min-width: 1300px){
+  @media (min-width: 1300px) {
     padding: 8px 20px 11px 20px;
   }
 }
 
 .announcementText {
-  color: #ffffff;
+  color: #fff;
   font-size: 12px;
   text-align: left;
   width: 200px;
@@ -111,7 +111,7 @@
 
 .announcementAuthor {
   width: fit-content;
-  color: #ffffff;
+  color: #fff;
   font-size: 10px;
   text-decoration: underline;
   word-wrap: break-word;
