--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,7 +2,7 @@
   max-width: 150px;
   width: 130px;
   background-color: #460ede;
-  color: #ffffff;
+  color: #fff;
   font-weight: 300;
   padding: 10px 30px;
   border-radius: 10px;
@@ -16,8 +16,8 @@
   border-radius: 10px;
   font-size: 14px;
   font-weight: 200;
-  color: #ffffff;
-  background-color: #000000;
+  color: #fff;
+  background-color: #000;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
 }
 
