--- a/src/components/CustomSelect/CustomSelect.module.scss
+++ b/src/components/CustomSelect/CustomSelect.module.scss
@@ -12,7 +12,7 @@
     font-size: 14px;
     color: rgba(0, 0, 0, 0.3);
     background-color: white;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.05);
 
     &Open {
       background-color: #242424;
