--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -36,7 +36,7 @@
   max-width: 800px;
   height: 100%;
   max-height: 417px;
-  background-color: #ffffff;
+  background-color: #fff;
   z-index: 5;
   overflow-y: auto;
   border-radius: 10px;
@@ -73,7 +73,6 @@
   max-width: 430px;
   margin: 0 auto;
 }
-
 
 .modalTitle {
   font-size: 20px;
