--- a/src/components/ProjectPage/ProjectVacancy/ProjectVacancy.module.scss
+++ b/src/components/ProjectPage/ProjectVacancy/ProjectVacancy.module.scss
@@ -1,5 +1,5 @@
 .vacanciesWrapper {
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     display: flex;
     justify-content: space-between;
   }
@@ -23,23 +23,23 @@
   text-align: center;
   margin-bottom: 24px;
 
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     font-size: 15px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     font-size: 17px;
   }
 }
 
 .separateSkills {
- display: none;
- order: 2;
+  display: none;
+  order: 2;
 
- @media (min-width: 768px){
-   display: block;
-   max-width: 546px;
- }
+  @media (min-width: 768px) {
+    display: block;
+    max-width: 546px;
+  }
 }
 
 .skillsTitle {
@@ -57,7 +57,7 @@
   font-size: 13px;
   line-height: 22px;
 
-  @media (min-width: 786px){
+  @media (min-width: 786px) {
     font-size: 15px;
   }
 }
@@ -82,8 +82,8 @@
   padding: 14px 21px 14px 8px;
   border: 1px solid rgba(112, 112, 112, 0.15);
   border-radius: 10px;
-  
-  @media (min-width: 1024px){
+
+  @media (min-width: 1024px) {
     width: 357px;
     padding: 16px;
   }
@@ -92,7 +92,7 @@
 .activeVacancyContent {
   width: 245px;
   background-color: #460ede;
-  color: #ffffff;
+  color: #fff;
 
   @media (min-width: 1024px) {
     width: 357px;
@@ -108,11 +108,11 @@
   text-overflow: ellipsis;
   margin-right: 10px;
 
-  @media (min-width: 786px){
+  @media (min-width: 786px) {
     font-size: 15px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     font-size: 17px;
     margin-right: 52px;
   }
@@ -128,7 +128,7 @@
   height: 15px;
   margin-right: 8px;
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     width: 13px;
     height: 20px;
     margin-right: 4px;
@@ -139,11 +139,11 @@
   font-size: 13px;
   margin-right: 21px;
 
-  @media (min-width: 786px){
+  @media (min-width: 786px) {
     font-size: 15px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     font-size: 17px;
     margin-right: 0;
   }
@@ -153,7 +153,7 @@
   width: 24px;
   height: 24px;
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     width: 31px;
     height: 31px;
     margin-left: 41px;
