--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -6,16 +6,16 @@
   font-weight: 300;
   padding: 11px 9px;
 
-  @media (min-width: 768px){
+  @media (min-width: 768px) {
     font-size: 17px;
   }
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     font-size: 20px;
   }
 }
 
 .tabActive {
-  color: #ffffff;
+  color: #fff;
   background: #242424;
 }
