--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -3,22 +3,22 @@
 }
 
 .tabsList {
-  background-color: #ffffff;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     max-width: 558px;
   }
 }
 
 .tabContent {
-  background: #ffffff;
-  border-radius: 0px 0px 10px 10px;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
   padding: 24px 16px;
 
-  @media (min-width: 1024px){
+  @media (min-width: 1024px) {
     padding: 62px 48px;
   }
 }
