--- a/src/components/ProjectSearch/ProjectSearch.module.scss
+++ b/src/components/ProjectSearch/ProjectSearch.module.scss
@@ -103,12 +103,20 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     margin-bottom: 48px;
 
     .searchLabel {
+      &::before {
+        left: 16px;
+        top: 12px;
+        width: 17px;
+        height: 17px;
+      }
+
       .searchInput {
-        width: 362px;
-        height: 54px;
+        width: 352px;
+        height: 40px;
         margin-right: 62px;
         margin-bottom: 0;
         border-radius: 10px;
