created button components

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,11 @@ li {
 input {
   outline: none;
 }
+
+button {
+  border: none;
+  outline: none;
+
+  background-color: transparent;
+  cursor: pointer;
+}
