--- a/src/pages/Assets/Assets.module.scss
+++ b/src/pages/Assets/Assets.module.scss
@@ -5,3 +5,12 @@
 .inputGroup {
   margin-bottom: 30px;
 }
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+.button {
+  margin-bottom: 30px;
+}
