--- a/src/components/common/Checkbox/Checkbox.module.scss
+++ b/src/components/common/Checkbox/Checkbox.module.scss
@@ -22,7 +22,7 @@
       top: 29%;
       left: 30%;
 
-      background-image: url('../../assets/images/markIcon.svg');
+      background-image: url('../../../assets/images/markIcon.svg');
       background-repeat: no-repeat;
       background-size: 9px 10px;
       transition: all 0.2s;
