--- a/src/components/common/Select/Select.module.scss
+++ b/src/components/common/Select/Select.module.scss
@@ -20,7 +20,7 @@
   border: 1px solid #a4a4a4;
   border-radius: 5px;
 
-  background-image: url('../../assets/images/arrowDown.svg');
+  background-image: url('../../../assets/images/arrowDown.svg');
   background-repeat: no-repeat;
   background-size: 24px 12px;
   background-position: calc(100% - 16px) 50%;
