destructured AddTask component

--- a/src/components/common/Select/Select.module.scss
+++ b/src/components/common/Select/Select.module.scss
@@ -24,5 +24,6 @@
   background-repeat: no-repeat;
   background-size: 24px 12px;
   background-position: calc(100% - 16px) 50%;
+  font-size: 15px;
   color: #a4a4a4;
 }
