--- a/src/pages/AddTask/AddTask.module.scss
+++ b/src/pages/AddTask/AddTask.module.scss
@@ -1,5 +1,5 @@
 .container {
-  padding-bottom: 217px;
+  padding-bottom: 50px;
 }
 
 .pageHeader {
@@ -119,6 +119,6 @@
   margin-right: 32px;
 }
 
-.createTask {
+.createTaskButton {
   margin-left: calc(50% - 240px);
 }
