--- a/src/components/common/CustomButton/CustomButton.module.scss
+++ b/src/components/common/CustomButton/CustomButton.module.scss
@@ -3,6 +3,7 @@
   height: 56px;
   border: 1px solid #000000;
   border-radius: 5px;
+  font-size: 0;
 
   background-repeat: no-repeat;
   background-size: 26px 26px;
