--- a/src/pages/AdminCheckView/AdminCheckView.module.scss
+++ b/src/pages/AdminCheckView/AdminCheckView.module.scss
@@ -1,19 +1,23 @@
 .container {
   padding-top: 75px;
 }
-
 .caption {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 32px;
+  margin-bottom: 32px;
 }
-
 .buttons {
   display: flex;
-  margin-top: 32px;
+  margin-bottom: 80px;
   button {
     margin-right: 50px;
   }
+}
+
+.description{
+  h3{
+    font-size: 20px;
+  }
+  li{
+    font-size: 15px;
+  }
+
 }
