--- a/src/pages/AdminCheckView/AdminCheckView.module.scss
+++ b/src/pages/AdminCheckView/AdminCheckView.module.scss
@@ -12,12 +12,35 @@
   }
 }
 
-.description{
-  h3{
+.description {
+  h3 {
     font-size: 20px;
   }
-  li{
+  li {
     font-size: 15px;
   }
+}
 
+.task-description {
+  display: block;
+}
+
+.clarification {
+  display: block;
+}
+
+.links-breakdown {
+  display: block;
+}
+
+.links {
+  display: block;
+}
+
+.breakdown {
+  display: block;
+}
+
+.criteria {
+  display: block;
 }
